Addresses issues https://github.com/FXyz/FXyz/issues/104 and https://github.com/FXyz/FXyz/issues/133 Fixed Double boxing deprecation warning.